added simple html template

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!doctype html>
+
 <h1>Hello World</h1>
+<head>
+    <meta>
+    <title></title>
+    <meta>
+
+    <link>
+    <link>
+
+  </head>
+
+<body>
+    <script></script>
+</body>
+</html>
